--- a/src/styles/pages/stack.scss
+++ b/src/styles/pages/stack.scss
@@ -1,7 +1,8 @@
+@import './../partials/mixins';
 .stack-main__wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include display-flex;
+  @include align-items(center);
+  @include justify-content(center);
   width: 100vw;
   height: 100%;
   @media (max-width: 960px) {
@@ -20,13 +21,21 @@
   }
   .stack-main__left {
     margin: -1px -3px 0 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
   }
   .stack-main__right {
     margin-left: -2px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   img {
     z-index: 5;
@@ -36,6 +45,8 @@
     opacity: 0.5;
     width: 30%;
     height: 100%;
+    -webkit-transition: 1s all;
+    -o-transition: 1s all;
     transition: 1s all;
     @media (max-width: 1200px) {
       width: 50%;
@@ -105,10 +116,17 @@
     }
 }
 
+@-webkit-keyframes btnAnimation {
+  0%   {opacity: 0.45;}
+  25%  {opacity: 0.2;}
+  50%  {opacity: 0;}
+  100% {opacity: 0.45;}
+}
+
 @keyframes btnAnimation {
-    0%   {opacity: 0.45;}
-    25%  {opacity: 0.2;}
-    50%  {opacity: 0;}
-    100% {opacity: 0.45;}
-  }
+  0%   {opacity: 0.45;}
+  25%  {opacity: 0.2;}
+  50%  {opacity: 0;}
+  100% {opacity: 0.45;}
+}
 
